kubernetes/service-public-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fww-wrapper-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: public
  rules:
    - http:
        paths:
        - path: /
          pathType: Exact
          backend:
            service:
              name: fww-wrapper
              port:
                number: 80
